styles/diary.css
/* Layout styles. */
.page-header {
	margin-top: 0;
	padding-bottom: 10px;
}

.page-header h4 {
	margin: 0;
}

.grid-view {
	padding: 0 !important;
}

.table {
	margin: 0;
}

#point-list .table,
#daily-point-list .table
{
	margin-bottom: 10px;
}

.pager {
	margin: 0 0 10px !important;
}

.summary {
	margin: 10px 0 0 !important;
}

.pagination {
	margin: 10px 0 0;
}

footer {
	margin-top: 20px;
}

footer hr {
	margin: 0 0 10px;
}

.alert {
	margin-top: 10px;
}

/* Form styles. */
form .panel {
	padding: 10px;
}

form .panel :last-child {
	margin-bottom: 0;
}

/* AJAX request process animation styles. */
.age-points-button img,
.save-day-button img,
.create-backup-button img {
	display: none;
	height: 18px;
}

/* Grid view styles. */
.table-responsive {
	border: none;
	overflow: visible;
}

.wait {
	opacity: 0.75;
	filter: alpha(opacity=75);
	pointer-events: none;
}

.selected td {
	background-color: #d9edf7 !important;
}

/* Navigation bar styles. */
body {
	padding-top: 70px;
}

.navbar-form {
	margin-right: 0 !important;
	padding-right: 0;
}

/* Verify code styles. */
.verify-code-container {
	margin: 5px 0 10px;
}

.verify-code {
	margin-right: 5px;
	cursor: pointer;
}

.verify-code + button {
	height: 60px;
	font-size: larger;
}

/* Button column styles. */
.button-column {
	font-size: larger;
}

.button-column.narrow {
	width: 30px !important;
}

.button-column.point-state-column {
	font-size: inherit !important;
	text-align: left !important;
}

.danger .backup_create_duration,
.warning .backup_create_duration {
	font-weight: bold;
}

/* Point state menu styles. */
.dropdown .glyphicon {
	font-size: larger;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
	background: #428bca;
	color: white !important;
}

.state-initial {
	font-weight: bold;
	color: rgb(51, 51, 51);
}

a.state-initial:hover,
a.state-initial:focus {
	color: rgb(51, 51, 51);
}

.state-satisfied,
.state-canceled {
	text-decoration: line-through;
}

.state-satisfied {
	color: green !important;
}

.state-not-satisfied {
	color: red !important;
}

.state-canceled {
	color: rgb(128, 128, 128) !important;
}

/* Corrections styles for Awesome Bootstrap Checkbox. */
.checkbox input[type=checkbox]:checked + label:after {
	font-family: 'Glyphicons Halflings';
	content: "\e013";
}

.checkbox label {
	padding-left: 5px;
}

.checkbox label:after {
	padding-left: 4px;
	padding-top: 2px;
	font-size: 9px;
}

/* Corrections styles for jQuery UI Spinner. */
.ui-spinner {
	display: block;
}

.daily-point-form .ui-spinner {
	display: inline-block;
}

@media (max-width: 767px) {
	.daily-point-form .ui-spinner {
		display: block;
	}
}

.ui-widget-content {
	border: none;
}

.ui-spinner-input {
	margin: 0;
	padding: 6px 12px;
	background: #fff;
	border: 1px solid #ccc;
	font-size: 14px !important;
	color: #555;
}

.ui-corner-tr {
	border-top-right-radius: 4px;
}

.ui-corner-br {
	border-bottom-right-radius: 4px;
}

/* Stats styles. */
.stats-view.empty-label {
	display: none;
	font-style: italic;
}

.stats-view.daily-points .graph-frame,
.stats-view.points .graph-frame {
	background-color: #428bca;
	border: 1px solid #ddd;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
}

.stats-view.daily-points .graph-axis-text,
.stats-view.points .graph-axis-text {
	color: white;
	cursor: default;
}

.stats-view.daily-points .graph-axis-button,
.stats-view.points .graph-axis-button {
	background-color: #5cb85c;
}

.stats-view.daily-points .graph-axis-button:hover,
.stats-view.points .graph-axis-button:hover {
	background-color: #449d44;
}

.stats-view.daily-points .graph-canvas,
.stats-view.points .graph-canvas {
	background-color: #fcf8e3;
}

.stats-view.daily-points .graph-tooltip-label,
.stats-view.points .graph-tooltip-label {
	border-radius: 4px;
}

.stats-view.projects .timeline-frame {
	background-color: #428bca;
	border: 1px solid #ddd;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
}

.stats-view.projects .timeline-groups-text,
.stats-view.projects .timeline-axis-text {
	color: white;
	cursor: default;
}

.stats-view.projects .timeline-content {
	background-color: #fcf8e3;
}

.stats-view.projects .timeline-axis {
	background-color: #428bca;
	opacity: 1;
}

.stats-view.projects .timeline-axis-grid-minor {
	border-color: #c0c0c0;
}

.stats-view.projects .timeline-event {
	border: 0;
	border-radius: 0;
}

.stats-view.projects .timeline-event-content {
	margin: 0;
}

.stats-view.projects .timeline-event-content .content {
	height: 12px;
	background-color: #5cb85c;
}

.stats-view.projects .timeline-event-content .separator {
	height: 0;
}

.stats-view.project-list {
	background-color: #fcf8e3;
	border: 1px solid #ddd;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
	overflow: hidden;
}

.stats-view.project-list .glyphicon-folder-open {
	color: #428bca;
}

.stats-view.project-list .glyphicon-file {
	color: #5cb85c;
}

/* Daily point form styles. */
.daily-point-form-container {
	margin-bottom: 20px;
}

.daily-point-form #daily-point-form_es_ {
	margin-top: 0;
	margin-bottom: 10px;
}

.daily-point-form #DailyPointForm_day_em_,
.daily-point-form #DailyPointForm_year_em_ {
	margin-bottom: 0;
}

/* Delete points form styles. */
.search-points-form.loading .search-input {
	background-image: url(/images/processing-icon.gif);
	background-repeat: no-repeat;
	background-position: calc(100% - 12px) center;
}

.points-found-controls-view {
	display: none;
	margin-bottom: 15px;
}

.points-found-empty-view {
	display: none;
	font-style: italic;
}

.points-found-view {
	display: none;
	background-color: #fcf8e3;
	border: 1px solid #ddd;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
	overflow: hidden;
}

.points-found-view .glyphicon-folder-open {
	color: #428bca;
}

.points-found-view .glyphicon-calendar,
.points-found-view .glyphicon-file {
	color: #5cb85c;
}

.points-found-view mark {
	border: 1px solid #ddd;
	border-radius: 4px;
}

/* Header with button styles. */
.header-with-button {
	padding-bottom: 20px;
}

.header-with-button .btn + .btn {
	margin-right: 5px;
}

.header-with-button p {
	margin-bottom: 0;
}

/* Day list styles. */
.day-completed-flag-column {
	width: 50px;
	text-align: center;
}

.day-satisfied-column {
	width: 50px;
}

/* Editors styles. */
#day-editor,
#daily-point-editor,
#import-editor,
#diff-viewer {
	height: 500px;
	border-radius: 4px;
	font-size: 14px;
}

#day-mobile-editor,
#daily-point-mobile-editor,
#import-mobile-editor {
	height: 250px;
	padding: 0 5px;
	background-color: #2c2828;
	font-family: monospace;
	font-size: 12px;
	color: #8f938f;
}

.saved-flag,
.day-completed-flag {
	cursor: default;
}

.label {
	display: inline-block;
	padding: 5px 10px;
}

/* Achievements styles. */
.achievements-selects-container {
	margin-bottom: 20px;
}

.achievements-selects-container p {
	margin-bottom: 0;
}

.achievements-selects-form {
	margin-left: 10px;
}

/* on collision with achievements counter paragraph */
@media (max-width: 438px) {
	.achievements-selects-form {
		margin-bottom: 15px;
	}
}

#achievements-list .empty,
#future-achievements-list .empty {
	font-style: italic;
}

.achievement-view {
	margin-bottom: 10px;
	padding: 10px;
	background-color: #f9f9f9;
}

.achievement-view p:last-child {
	margin-bottom: 0;
}

/* Mistakes styles. */
.mistakes-controls-container {
	margin-bottom: 20px;
}

.mistakes-controls-container p {
	margin-bottom: 0;
}

/* Spellcheck styles. */
.spellcheck-flag {
	height: 25px;
}

.spellcheck-flag img {
	display: none;
	height: 13px;
}

.spellcheck-flag .correction {
	margin-left: -4px;
	width: 0;
	visibility: hidden;
}

.misspelled {
	position: absolute;
	background-image: linear-gradient(to right, #d9534f 67%, transparent 33%);
	background-position: bottom;
	background-size: 5px 1px;
	background-repeat: repeat-x;
	border-radius: 0 !important;
}

/* Whitelist styles. */
.whitelist-controls-container {
	margin-bottom: 10px;
}

.whitelist-controls-container form {
	margin-left: 10px;
}

/* Utils styles. */
.small-text {
	font-size: smaller;
}

.unimportant-text {
	color: #777;
}

.italic-text {
	font-style: italic;
}

/* http://stackoverflow.com/a/4407335/3884331 */
.not-selectable {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.without-bottom-margin {
	margin-bottom: 0;
}

.clean-button {
	cursor: pointer;
}

/* Additional styles. */
.input-group-addon {
	color: #428bca;
}

.backups-legend,
.access-log-legend {
	margin-top: 10px;
}

.point-text input {
	font-weight: normal;
}

.date-column {
	width: 50px;
}

.blue-button,
.blue-button:focus,
.blue-button:hover,
.blue-button:active,
.blue-button:active:focus,
.blue-button:active:hover {
	color: #428bca;
}

a[disabled] {
	pointer-events: none;
}

